# utility-knowledge-lakehouse

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
docs/: ARCHITECTURE.md  EMBEDDED.md  REAL_SOURCES.md  ROW_SECURITY.md  SETUP.md  TROUBLESHOOTING.md
resources/: app.yml  endpoints.yml  jobs.yml  schemas.yml
src/app/: app.yaml  deploy_app.py  main.py  requirements.txt
src/app/static/: index.html
src/layer1_digitize/: 01_parse_documents.py  02_extract_fields.py
src/layer2_consolidate/: 03_consolidate_sources.py  04_chunk_documents.py  05_create_vector_index.py
src/layer3_implicit/: 06_process_debriefs.py
src/layer4_serve/: agent.py  deploy_agent.py  eval_harness.py
src/sample_data/: generate_data.py  upload_samples.py
src/setup/: 00_bootstrap.py
tests/: test_generate_data.py
