[project]
name = "utility-knowledge-lakehouse"
version = "0.1.0"
description = "Reference implementation of a utility knowledge system on Databricks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Drew Triplett" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "N", "UP"]
